--- a/CustomList/CustomList.csproj
+++ b/CustomList/CustomList.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2B447FB9-33E5-4DD3-954E-FA57EA25A387}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CustomList</RootNamespace>
-    <AssemblyName>CustomList</AssemblyName>
+    <RootNamespace>CustomListProj</RootNamespace>
+    <AssemblyName>CustomListProj</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
