--- a/CustomList/CustomList.csproj
+++ b/CustomList/CustomList.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EngineType.cs" />
+    <Compile Include="RocketEngines.cs" />
     <Compile Include="CustomList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
