Implemented the IEnumerable interface to allow the foreach function to be used with CustomList. Added a simple Bubble Sort Algorithm called using a do Sort(), currently puts empty and default/null values in the start of the list. It will sort Alphanumeric strings starting with numerals than alaph characters ignoring case of the first letter.

--- a/CustomList/CustomList.csproj
+++ b/CustomList/CustomList.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RandomNumGen.cs" />
     <Compile Include="EngineType.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="RocketEngines.cs" />
     <Compile Include="CustomList.cs" />
     <Compile Include="Program.cs" />
