--- a/CustomList/CustomList.csproj
+++ b/CustomList/CustomList.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="RandomNumGen.cs" />
     <Compile Include="EngineType.cs" />
     <Compile Include="RocketEngines.cs" />
